chi-square test limitation added

--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -1069,6 +1069,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(52, 4)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_data_encoded.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [
@@ -1287,11 +1307,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Chi-Square is sensitive to small frequencies in cells of tables. Generally, when the expected value in a cell of a table is less than 5, chi-square can lead to errors in conclusions."
+   ]
   }
  ],
  "metadata": {
