null hypothesis added

--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -1219,9 +1219,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "null hypothesis: variable is independent\n",
+    "null hypothesis: two variables are independent\n",
     "\n",
-    "alternative hypothesis: variable is dependent\n",
+    "alternative hypothesis: two variables are dependent\n",
     "\n",
     "p-value = 0.05"
    ]
