--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -1223,12 +1223,30 @@
     "\n",
     "alternative hypothesis: two variables are dependent\n",
     "\n",
-    "p-value = 0.05"
+    "p-value = 0.05 (3.84 chi with 1 degree of freedom) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chi_scores_df = chi_scores_df.sort_values(by=['chi_score'], ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1283,13 +1301,73 @@
        "0   0.772944       sx_male"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chi_scores_df.sort_values(by=['chi_score'], ascending=True)"
+    "chi_scores_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chi_score</th>\n",
+       "      <th>colname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.366061</td>\n",
+       "      <td>rk_full</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.772944</td>\n",
+       "      <td>sx_male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  chi_score  colname\n",
+       "2  0.366061  rk_full\n",
+       "0  0.772944  sx_male"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi_scores_df[chi_scores_df.chi_score > alpha]"
    ]
   },
   {
